--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "name": "启动程序",
-            "program": "${workspaceFolder}/distcode/day6.js"
+            "program": "${workspaceFolder}/distcode/0731.js"
         }
     ]
 }
